--- a/front/src/components/Chat/styles.css
+++ b/front/src/components/Chat/styles.css
@@ -82,7 +82,6 @@
     gap: 1rem;
     align-items: center;
     border-bottom: 5px solid #d5d5d5;
-    justify-content: space-around;
 }
 
 .msg-card:hover {
@@ -91,8 +90,8 @@
 }
 
 .img-card-msgs {
-    width: 15%;
-    height: 80%;
+    width: 50px;
+    height: 50px;
 }
 
 .img-card-msgs img {
@@ -105,7 +104,7 @@
     width: 45%;
     display: flex;
     flex-direction: column;
-    /* gap: 0.3rem; */
+    justify-content: center;
 }
 
 .username-msg {
