--- a/front/src/components/Chat/styles.css
+++ b/front/src/components/Chat/styles.css
@@ -3,6 +3,7 @@
     position: fixed;
     bottom: 10px;
     left: 10px;
+    z-index: 1;
 }
 
 .chat-button {
@@ -82,6 +83,7 @@
     gap: 1rem;
     align-items: center;
     border-bottom: 5px solid #d5d5d5;
+    justify-content: space-around;
 }
 
 .msg-card:hover {
@@ -90,8 +92,8 @@
 }
 
 .img-card-msgs {
-    width: 50px;
-    height: 50px;
+    width: 15%;
+    height: 80%;
 }
 
 .img-card-msgs img {
@@ -104,7 +106,7 @@
     width: 45%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* gap: 0.3rem; */
 }
 
 .username-msg {
