--- a/front/src/components/PhotoProfile/styles.css
+++ b/front/src/components/PhotoProfile/styles.css
@@ -9,9 +9,16 @@
   border-radius: 5rem;
   background-color: #c7d3eb;
   width: 170px;
-  text-align: center;
-  padding: 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0.3rem;
   border: 1px solid rgb(0, 0, 0);
+}
+.name-profile p{
+  font-size: 14px;
+  color: rgb(44, 44, 44);
 }
 
 .moldure-photo {
