--- a/front/src/pages/ContactProfile/styles.css
+++ b/front/src/pages/ContactProfile/styles.css
@@ -5,14 +5,17 @@ body {
 .structure-contact-profile{
   display: flex;
   justify-content: center;
+  width: 100%;
 }
 
 .container-contact-profile{
   font-family: "Poppins", sans-serif;
-  width: 85%;
+  width: 70%;
+  height: 89vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-around;
 }
 
 .structure-carrossel{
@@ -27,26 +30,11 @@ body {
   width: 0px;
 }
 
-.container-profile{
-  font-family: "Poppins", sans-serif;
-  max-width: 75vw;
-  display: flex;
+.align-centered{
   flex-direction: column;
-  padding-right: 40px;
-  align-items: center;
-}
-
-.container-progress-bar{
-  width: 80%;
-  height: 50vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;  
-}
-
-.div-progress-bar{
-  display: flex;
-  align-items: center;
+  width: 100%;
+  height: 50%;
+  margin-bottom: 200px;
 }
 
 .buttonAdd{
