--- a/front/src/pages/LandingPage/styles.css
+++ b/front/src/pages/LandingPage/styles.css
@@ -56,3 +56,10 @@
   width: 400px;
   height: 500px;
 }
+
+@media (max-width: 768px) {
+  .container-all-content {
+    flex-direction: column;
+    padding: 0;
+  }
+}
