--- a/front/src/components/Chat/styles.css
+++ b/front/src/components/Chat/styles.css
@@ -90,13 +90,12 @@
 }
 
 .img-card-msgs {
-  width: 15%;
   height: 80%;
 }
 
 .img-card-msgs img {
-  width: 100%;
-  height: 100%;
+  width: 50px;
+  height: 50px;
   border-radius: 100%;
 }
 
