--- a/front/src/pages/FullCards/styles.css
+++ b/front/src/pages/FullCards/styles.css
@@ -1,274 +1,280 @@
-.structure-fullcard{
-  display: flex;
-  justify-content: flex-start;
-  max-width: 100%;
-  position: relative;
-}  
-
-.fullcard{
-width: 100%;
-height: 100%;
+.structure-fullcard {
+    display: flex;
+    justify-content: flex-start;
+    max-width: 100%;
+    position: relative;
 }
 
-.structure-carrossel-fc{
-  position: absolute;
-  width: 25%;
-  overflow-y: scroll;
-  overflow-x: hidden;
-  right: 5%;
+.fullcard {
+    width: 100%;
+    height: 100%;
 }
 
-.structure-carrossel-fc::-webkit-scrollbar-track{
--webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-border-radius: 10px;
-background-color: #151b228f;
+.structure-carrossel-fc {
+    position: absolute;
+    width: 25%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    right: 5%;
 }
 
-.structure-carrossel-fc::-webkit-scrollbar
-{
-width: 12px;
-background-color: #ffffff00;
+.structure-carrossel-fc::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    background-color: #151b228f;
 }
 
-.structure-carrossel-fc::-webkit-scrollbar-thumb
-{
-border-radius: 10px;
--webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-background-color: #949191;
+.structure-carrossel-fc::-webkit-scrollbar {
+    width: 12px;
+    background-color: #ffffff00;
 }
 
-.background-card{
-  font-family: "Poppins", sans-serif;
-  width: 55%;
-  height: 87vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  background-color: #151b228f;
-  margin-left: 4%;
-  border: 1.5px solid rgb(255, 255, 255);
-  border-radius: 1.5rem;
+.structure-carrossel-fc::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, .3);
+    background-color: #949191;
 }
 
-.background-card h2{
-line-height: 1.5rem;
-color: rgb(255, 255, 255);
+.background-card {
+    font-family: "Poppins", sans-serif;
+    width: 55%;
+    height: 87vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    background-color: #151b228f;
+    margin-left: 4%;
+    border: 1.5px solid rgb(255, 255, 255);
+    border-radius: 1.5rem;
 }
 
-.div_training_card{
-border: 1.5px solid rgb(255, 255, 255);
-background-color: #151b228f;
-border-radius: 1.5rem;
-width: 80%;
-height: 40%;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: flex-start;
+.background-card h2 {
+    line-height: 1.5rem;
+    color: rgb(255, 255, 255);
 }
 
-.div_meal_card{
-border: 1.5px solid rgb(255, 255, 255);
-background-color: #151b228f;
-border-radius: 1.5rem;
-width: 80%;
-height: 40%;
-display: flex;
-flex-direction: column;
-align-items: center;
-justify-content: flex-start;
+.div_training_card {
+    border: 1.5px solid rgb(255, 255, 255);
+    background-color: #151b228f;
+    border-radius: 1.5rem;
+    width: 80%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-.title_training_card, .title_meal_card{
-color: white;
-width: 90%;
-padding: 1rem;
-display: flex;
-justify-content: space-between;
-border-bottom: white solid 1px;
+.div_meal_card {
+    border: 1.5px solid rgb(255, 255, 255);
+    background-color: #151b228f;
+    border-radius: 1.5rem;
+    width: 80%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
 }
 
-.body_training_card{
-color: white;
-width: 90%;
-padding: 1rem;
-height: 75%;
-overflow-y: scroll;
-overflow-x: hidden;
+.title_training_card,
+.title_meal_card {
+    color: white;
+    width: 90%;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: white solid 1px;
 }
 
-.body_training_card h3{
-font-size: 1rem;
-margin-bottom: 0.8rem;
+.body_training_card {
+    color: white;
+    width: 90%;
+    padding: 1rem;
+    height: 75%;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
-.body_training_card li{
-font-size: 0.8rem;
+.body_training_card h3 {
+    font-size: 1rem;
+    margin-bottom: 0.8rem;
 }
 
-.daily_training_check, .daily_meal_check{
-width: 90%;
-height: 25%;
-display: flex;
-justify-content: end;
-align-items: center;
+.body_training_card li {
+    font-size: 0.8rem;
 }
 
-.daily_training_check Button, .daily_meal_check Button{
-margin-right: 30%;
+.daily_training_check,
+.daily_meal_check {
+    width: 90%;
+    height: 25%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
 }
 
-.edit_form_meal, .edit_form_training{
-width: 90%;
-height: 15%;
-display: flex;
-justify-content: space-evenly;
-margin-bottom: 1rem;
-align-items: center;
+.daily_training_check Button,
+.daily_meal_check Button {
+    margin-right: 30%;
 }
 
-.edit_form_meal input, .edit_form_training input{
-width: 68%;
-border-radius: 5rem;
-padding: 0.3rem;
-border-radius: 0.5rem;
-font-size: 90%;
-background-color: rgba(255, 255, 255, 0.786);
+.edit_form_meal,
+.edit_form_training {
+    width: 90%;
+    height: 15%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 1rem;
+    align-items: center;
 }
 
-.add_form_meal input{
-width: 68%;
-border-radius: 5rem;
-font-size: 90%;
-padding: 0.3rem;
-justify-content: space-between;
+.edit_form_meal input,
+.edit_form_training input {
+    width: 68%;
+    border-radius: 5rem;
+    padding: 0.3rem;
+    border-radius: 0.5rem;
+    font-size: 90%;
+    background-color: rgba(255, 255, 255, 0.786);
+    caret-color: #000;
 }
 
-.add_form_training input{
-width: 68%;
-border-radius: 5rem;
-font-size: 90%;
-padding: 0.3rem;
+.add_form_meal input {
+    width: 68%;
+    border-radius: 5rem;
+    font-size: 90%;
+    padding: 0.3rem;
+    justify-content: space-between;
 }
 
-.daily_training_checkbox, .daily_meal_checkbox{
-width: 1.2rem;
-height: 1.2rem;
+.add_form_training input {
+    width: 68%;
+    border-radius: 5rem;
+    font-size: 90%;
+    padding: 0.3rem;
+}
+
+.daily_training_checkbox,
+.daily_meal_checkbox {
+    width: 1.2rem;
+    height: 1.2rem;
 }
 
 .body_training_card ul li {
-position: relative;
+    position: relative;
 }
 
 .edit_buttons {
-display: flex;
-gap: 8px;
+    display: flex;
+    gap: 8px;
 }
 
-.button_edit_training{
-width: 15px;
-height: 15px;
+.button_edit_training {
+    width: 15px;
+    height: 15px;
 }
 
-.button_edit_training:active{
-width: 14px;
-height: 14px;
-background-color: rgb(106, 99, 99);
+.button_edit_training:active {
+    width: 14px;
+    height: 14px;
+    background-color: rgb(106, 99, 99);
 }
 
-.task_line, .meal_line{
-display: flex;
-align-items: center;
-justify-content: space-between;
+.task_line,
+.meal_line {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
-.task_line p{
-width: 80%;
+.task_line p {
+    width: 80%;
 }
 
-.meal_line p{
-width: 80%;
-font-size: 0.8rem;
+.meal_line p {
+    width: 80%;
+    font-size: 0.8rem;
 }
 
 
-.body_meal_card{
-color: white;
-width: 90%;
-height: 75%;
-padding: 1rem;
-display: flex;
-flex-direction: column;
-overflow-y: scroll;
-overflow-x: hidden;
+.body_meal_card {
+    color: white;
+    width: 90%;
+    height: 75%;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
-.body_training_card::-webkit-scrollbar-track{
-background-color: transparent;
+.body_training_card::-webkit-scrollbar-track {
+    background-color: transparent;
 }
 
-.body_meal_card::-webkit-scrollbar-track{
-background-color: transparent;
+.body_meal_card::-webkit-scrollbar-track {
+    background-color: transparent;
 }
 
-.body_meal_card h3{
-font-size: 0.8rem;
+.body_meal_card h3 {
+    font-size: 0.8rem;
 }
 
-.body_meal_card li{
-font-size: 0.8rem;
+.body_meal_card li {
+    font-size: 0.8rem;
 }
 
-.structure-minicarrossel{
-position: absolute;
-right: 4%;
-top: 12%;
-display: flex;
-flex-direction: column;
+.structure-minicarrossel {
+    position: absolute;
+    right: 4%;
+    top: 12%;
+    display: flex;
+    flex-direction: column;
 }
 
-.message_box{
-width: 23%;
-height: 40vw;
-border-radius: 2.5rem;
-align-self: center;
+.message_box {
+    width: 23%;
+    height: 40vw;
+    border-radius: 2.5rem;
+    align-self: center;
 }
 
-.buttoncarrossel{
-margin: 15px;
-width: 50px;
-height: 50px;
-background-color: rgba(1, 16, 28, 0);
-border-radius: 50%;
-align-self: flex-end;
+.buttoncarrossel {
+    margin: 15px;
+    width: 50px;
+    height: 50px;
+    background-color: rgba(1, 16, 28, 0);
+    border-radius: 50%;
+    align-self: flex-end;
 }
 
-.divbuttoncarrossel{
-width: 50px;
-height: 50px;
-position: absolute;
-bottom: 15%;
-left: 10px;
-z-index: 2;
+.divbuttoncarrossel {
+    width: 50px;
+    height: 50px;
+    position: absolute;
+    bottom: 15%;
+    left: 10px;
+    z-index: 2;
 }
 
-.xbutton{
-width: 40px;
-height: 40px;
-background-color: black;
+.xbutton {
+    width: 40px;
+    height: 40px;
+    background-color: black;
 }
 
-.icons-edit-card:hover{
-  scale: 1.2;
-  cursor: pointer;
+.icons-edit-card:hover {
+    scale: 1.2;
+    cursor: pointer;
 }
 
 .edit-buttons {
-  display: none;
+    display: none;
 }
 
 .meal-line:hover .edit-buttons,
 .task-line:hover .edit-buttons {
-  display: block;
+    display: block;
 }
